# palantyr

./: pyproject.toml
backend/: pyproject.toml
backend/src/: main.py
backend/src/api/: dependencies.py
backend/src/api/containers/: params.py  request.py  response.py
backend/src/api/containers/routes/: containers_route.py
backend/src/api/containers/service/: container_api_service.py
backend/src/enums/: container_actions.py  container_status_enum.py
backend/src/helpers/: manager.py
backend/src/repos/: container_repo.py
backend/src/schemas/: action_schema.py  container_schema.py
backend/src/service/: container_service.py  services_manager.py
backend/src/utils/: datetime_utils.py
frontend/: package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: ContainerCard.tsx  StatusBadge.tsx
frontend/src/features/containers/: hooks.tsx
frontend/src/modules/containers/: model.tsx
frontend/src/services/api/: client.tsx  containers.tsx
src/repos/: container_repo.py
src/schemas/: container_schema.py
src/service/: container_service.py
